[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "litehtml"
version = "0.1.0"
authors = [
    { name="Grzegorz Makarewicz", email="mak@trisoft.com.pl" },
]
description = "LiteHtmlPy is a solution that helps python developers to create printouts and previews of html5/css3 pages without using a web browser."
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    'Development Status :: 4 - Beta',
    'Development Status :: 5 - Production/Stable',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Office/Business',
    'Topic :: Text Processing',
    'Topic :: Multimedia :: Graphics',
]

[project.urls]
"Homepage" = "https://github.com/m32/litehtmlpy"
"Bug Tracker" = "https://github.com/m32/litehtmlpy/issues"
